--- a/matrix/custom.css
+++ b/matrix/custom.css
@@ -70,6 +70,13 @@
             bottom: 100%;
             transform: translateX(-50%) translateY(0px); /* Adjust translateY value to space it out from the element */
         }
+
+        .hover-content iframe {
+            padding: none;
+            border: none;
+            width: 520px;
+            height: 420px;
+        }
         
         .icon:hover .hover-content,
         .icon:focus-within .hover-content,
